Changelog
=========

1.6.2 (unreleased)
------------------


1.6.1 (2010-07-18)
------------------

- Update license to GPL version 2 only.
  [hannosch]

1.6.0 (2010-07-01)
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Use a proper API to read response headers in tests.
  [hannosch]

- Avoid using the deprecated five:implements directive.
  [hannosch]

1.6.0a4 (2010-04-28)
--------------------

- Add RefreshViewletByClass command to ``zopecommands`` command set.
  This allow to fix event handlers that were broken because they were
  relying on viewlet (and manager) names
  instead of relying on their semantic.
  This refs http://dev.plone.org/plone/ticket/9703
  [gotcha]

1.6.0a3 (2010-04-09)
--------------------

- Better unicode character for dragging, better cursor.
  [limi]

1.6.0a2 (2010-02-18)
--------------------

- Changed replace_id in content_replacer.changeViewTemplate and
  content_replacer.replaceContentRegion to replace#content instead of
  redundant #region-content that is not in Plone anymore.
  [spliter]

- Updated markup to not use .documentContent.
  This refs http://dev.plone.org/plone/ticket/10231
  [limi]

1.6.0a1 (2009-11-19)
--------------------

- Fixed tests (portal-column-content is a div)
  [gotcha]

- Fixed refrehProvider zope command : providers do not need to inherit
  from Acquisition.Explicit anymore
  [gotcha]

- Removed interface BBB code for old Plone versions.
  [hannosch]

- Specified package dependencies.
  [hannosch]

- Made the tests independent of any default content in the site.
  [hannosch]

- Make the macroContent helper work on Zope 2.12 by
  using a BoundPageTemplate instead of an acquisition-
  wrapped ViewPageTemplateFile.
  [davisagli]

1.4.5 (2009-05-11)
------------------

- Made kss attribute tests pass on both Plone 3.2 and 3.3.
  Difference: on 3.3 contentview-history was removed and inline
  editing has been disabled by default.
  [maurits]

1.4.4 (2009-03-01)